[gd_scene load_steps=4 format=3 uid="uid://dyjqqtsb3fvdx"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_2gkcu"]

[sub_resource type="InputEventAction" id="InputEventAction_oqytq"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_pyccl"]
events = [SubResource("InputEventAction_oqytq")]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_2gkcu")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="btn_retomar" type="Button" parent="menu_holder"]
layout_mode = 2
shortcut = SubResource("Shortcut_pyccl")
text = "RETOMAR
"

[node name="btn_sair" type="Button" parent="menu_holder"]
layout_mode = 2
text = "SAIR
"

[connection signal="pressed" from="menu_holder/btn_retomar" to="." method="_on_btn_retomar_pressed"]
[connection signal="pressed" from="menu_holder/btn_sair" to="." method="_on_btn_sair_pressed"]
